# Telegra

./: .gitignore  Dockerfile  README.md  bump-version.py  docker-compose.yaml  pyproject.toml  requirements.txt  sample_config.env  start.sh  update.py
.github/workflows/: 1main.yml  main.yml
Backend/: __init__.py  __main__.py  config.py  logger.py
Backend/fastapi/: __init__.py  main.py  themes.py
Backend/fastapi/routes/: api_routes.py  stream_routes.py  stremio_routes.py  template_routes.py
Backend/fastapi/security/: credentials.py  tokens.py
Backend/fastapi/templates/: access_manage.html  admin_dashboard.html  base.html  custom_catalogs.html  dashboard.html  login.html  media_edit.html  media_management.html  subscriptions_manage.html
Backend/helper/: auto_catalog.py  custom_dl.py  custom_filter.py  database.py  encrypt.py  imdb.py  link_checker.py  metadata.py  modal.py  pinger.py  pyro.py  subscription_checker.py  task_manager.py
Backend/pyrofork/: bot.py  clients.py
Backend/pyrofork/plugins/: channels.py  fix_metadata.py  group_security.py  help.py  log.py  manual.py  reciever.py  restart.py  scanner.py  start.py  subscription.py  utilities.py
Backend/pyrofork/subscription_plugins/: start.py  subscription.py
